Fixed extra padding and renamed the login and register titles

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -328,11 +328,6 @@ footer a {
         left: 0;
         z-index: 1030;
     }
-
-    .header-container {
-        padding-top: 164px;
-    }
-
 }
 
 /* pad the top a bit when navbar is collapsed on mobile */
